Only skip certain hidden elements at MHTML serialization 1) Elements with hidden attributes 2) Hidden form elements

We orginally tried to act more aggresively by skipping all possible
hidden elements. But this does break certain web sites that uses
nth CSS selectors.

BUG=697970
TEST=tests updated
TBR=svaldez@chromium.org

Review-Url: https://codereview.chromium.org/2819723003
Cr-Commit-Position: refs/heads/master@{#464856}

Former-commit-id: 2ddf990431d6b7977a94e5da69f18a1a3d220a52